--- a/webroot/newtheme/custom/css/event.grid.css
+++ b/webroot/newtheme/custom/css/event.grid.css
@@ -34,7 +34,10 @@
     visibility: visible;
   }
   .gridCentered {
-    width: 785px;
+    width: 735px;
+  }
+  .event-list .card-size {
+    width: 245px;
   }
 }
 
