--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -1,7 +1,7 @@
 .event-list {
     min-height: 250px;
     background-color: #fff;
-    padding-top: 20px;
+    padding-top: 25px;
     padding-bottom: 20px;
 }
 .event-list .card-size {
@@ -14,15 +14,16 @@
     padding: 3px 15px 15px !important;
 }
 span.no-events, span.no-more-events {
-    display: block;
-    /* position: fixed; */
-    /* bottom: -28px; */
+    display: inline-block;
     text-align: center;
     width: 100%;
-    /* margin-top: 32px !important; */
     font-weight: bold;
-    /* padding-bottom: 25px; */
     font-size: 18px;
+    height: auto;
+    bottom: -20px;
+    position: absolute;
+    left: 0;
+    right: 0;
 } 
 .event-list .card-size .card {
     /*box-shadow: 0 1px 0px 0 rgba(0,0,0,.1), 0 1px 3px 0px rgba(0,0,0,.1) !important;*/
@@ -100,7 +101,7 @@ opacity:0.8 !important;
 .event-list .card-size .card .days-ago {
     color: #212529;
     font-size: 1rem !important;
-    width: 50px;
+    width: auto;
     height: 50px;
     right: 0;
     margin: 10px;
@@ -110,6 +111,7 @@ opacity:0.8 !important;
     display: none;
     border-radius: 0;
     background-color: #f7f7f7;
+    min-width: 50px;
 
     /*background: rgba(255,255,255,1);
     background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
@@ -301,7 +303,7 @@ opacity:0.8 !important;
     font-weight: bolder;
     padding-right: 9px;
     margin-bottom: 0 !important;
-    padding-top: 2px;
+    padding-top: 3px;
 } 
 .event-filters .filter-date {
     font-size: 14px;
@@ -344,7 +346,7 @@ opacity:0.8 !important;
     color: #474747;
     color: #474747;
     font-family: avenir, sans-serif;
-    font-weight: 100;
+    font-weight: bold;
 }
 .cs-fav-icons{
     width: 70px;    
