--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -253,21 +253,21 @@ opacity:0.8 !important;
 }
 .event-list .card-title a, .event-list .card-title a:hover {
     color: #0d0d0d;
-    font-size: 13px;
-    font-weight: bold;
+    font-size: 14px;
+    font-weight: 500;
     text-transform: capitalize !important;
 }
 
 .event-list .card-body .card-text {
     font-weight: normal;
     font-size: 12px !important;
-    color: #474747;
+    color: #6c757d;
     margin-bottom: 2px !important;
      overflow: hidden !important;
-   text-overflow: ellipsis !important;
- display: -webkit-box !important;
--webkit-line-clamp: 1 !important; /* number of lines to show */
-   -webkit-box-orient: vertical !important;
+    text-overflow: ellipsis !important;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 1 !important; /* number of lines to show */
+    -webkit-box-orient: vertical !important;
 }
 .event-list .card-body .card-event-date {
     /*width: 80%;*/
@@ -300,7 +300,7 @@ opacity:0.8 !important;
     padding-left: 20px;
 }
 .event-filters .top-categories label {
-    font-weight: bolder;
+    font-weight: 500;
     padding-right: 9px;
     margin-bottom: 0 !important;
     padding-top: 3px;
@@ -344,9 +344,8 @@ opacity:0.8 !important;
 }
 .cs-category-title.text-center, .epage-title-text{
     color: #474747;
-    color: #474747;
-    font-family: avenir, sans-serif;
-    font-weight: bold;
+    /*font-family: avenir, sans-serif;*/
+    font-weight: 500;
 }
 .cs-fav-icons{
     width: 70px;    
@@ -396,7 +395,7 @@ opacity:0.8 !important;
 }
 /*Event Title limit*/
 .event-title{
-    line-height: 14px !important;
+    line-height: 17px !important;
 }
 .social-icons{
     font-size: 15px;
