--- a/webroot/newtheme/custom/css/event.details.css
+++ b/webroot/newtheme/custom/css/event.details.css
@@ -148,3 +148,326 @@ font-size: 18px;
      height: 200px;
    /*  border: 1px solid #d4d4d4;*/
 }
+.buy-btn {
+    box-shadow: none !important
+}
+
+.modal-get-ticket .modal-content {
+    background-color: #f8f9fa;
+    border-radius: 0 !important;
+}
+.modal-get-ticket .modal-body {
+    padding-bottom: 0 !important;
+}
+
+.modal-get-ticket .e-title {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+.modal-get-ticket .e-details {
+    font-weight: 400;
+    font-size: 13px;
+}
+.steps-form-2 {
+    display: table;
+    width: 100%;
+    position: relative;
+}
+.steps-form-2 .steps-row-2 {
+    display: table-row;
+}
+.steps-form-2 .steps-row-2:before {
+    top: 14px;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 2px;
+    background-color: #7283a7;
+}
+.steps-form-2 .steps-row-2 .steps-step-2 {
+    display: table-cell;
+    text-align: center;
+    position: relative;
+}
+.steps-form-2 .steps-row-2 .steps-step-2 p {
+    margin-top: 0.5rem;
+}
+.steps-form-2 .steps-row-2 .steps-step-2 button[disabled] {
+    opacity: 1 !important;
+    filter: alpha(opacity=100) !important;
+}
+.steps-form-2 .steps-row-2 .steps-step-2 .btn-circle-2 {
+    padding: 7px 15px;
+    margin-top: -2px;
+    text-transform: capitalize;
+    font-size: 14px; 
+    background-color: #fff !important;
+    color: #000 !important;
+    border: 1px solid #ddd;
+    box-shadow: none;
+}
+.steps-form-2 .steps-row-2 .steps-step-2 .btn-circle-2:hover,
+.steps-form-2 .steps-row-2 .steps-step-2 .btn-circle-2.btn-active {
+    border: 1px solid #1b8fca !important;
+    color: #fff !important;
+    background-color: #1b8fca !important;
+}
+.steps-form-2 .steps-row-2 .steps-step-2 .btn-circle-2 .fa {
+    font-size: 1.7rem;
+}
+@media (min-width: 768px) {
+    .modal-get-ticket .modal-dialog {
+        max-width: 650px;
+        border: 0 !important;
+        border-radius: 0 !important;
+    }
+    .modal-get-ticket .modal-body {
+        padding-bottom: 0 !important;
+        padding-left: 48px;
+        padding-right: 48px;
+        padding-top: 24px !important;
+    }
+    .ticket-footer .row {
+        margin-left: -47px;
+        margin-right: -49px;
+    }
+}
+.steps-form-footer {
+    width: 100%;
+    margin-left: -1px;
+    margin-right: -1px;
+    background-color: #4abac5;
+    height: 60px;
+    padding: 8px 42px 7px 47px;
+}
+.steps-form-footer .nextBtn-2 {
+    background-color: #FD7809;
+    box-shadow: none;
+    text-transform: capitalize;
+    font-size: 16px !important;
+    padding: 5px 13px;
+}
+.setup-content-2 {
+    margin-right: 0;
+}
+.ticket-head {
+    margin-top: 10px;
+}
+.ticket-head .row {
+    margin: 0 !important;
+}
+.ticket-head .col {
+    font-size: 12px;
+    font-weight: 500;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.ticket-body .row {
+    border: 1px solid #ccc;
+    margin: 5px 0px 15px;
+    padding: 7px 3px;
+}
+.ticket-body .col {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.ticket-body .type-box .info {
+    font-size: 14px;
+    font-weight: 500;
+}
+.ticket-body .type-box .rate-info {
+    color: #FD7809;
+    font-weight: 400;
+}
+.ticket-body .type-box .rate-info amount {
+
+}
+.ticket-body .type-box .rate-info span {
+    font-size: 11px;
+    padding-left: 5px;
+    color: #b3b1b1;
+}
+.ticket-body .quantity-box .inner-box {
+    width: 75px;
+    height: 55px;
+}
+.ticket-body .quantity-box .plus {
+    border: 1px solid #615e5e;
+    padding: 0px 6px;
+}
+.ticket-body .quantity-box .qValue-txt {
+    border: 1px solid #615e5e;
+    padding: 2px 6px;
+    float: right;
+    width: 45px;
+    height: 46px;
+    text-align: center;
+    line-height: 38px;
+    font-size: 20px;
+    margin-top: 1px;
+}
+.ticket-body .quantity-box .minus {
+    border: 1px solid #615e5e;
+    padding: 0px 8px;
+}
+.ticket-body .amt-box {
+    color: #FD7809;
+    font-weight: 400;
+}
+.ticket-total {
+    margin: 25px 0 20px;
+    font-size: 14px;
+    font-weight: 400;
+}
+.ticket-total .tot-qty-txt {
+    border: 1px solid #ddd;
+    padding: 4px 5px;
+    background-color: #fff;
+    font-weight: 400;
+    font-size: 18px;
+    margin-left: 5px;
+}
+.ticket-total .tot-amt-txt {
+    border: 1px solid #ddd;
+    padding: 5px 7px;
+    background-color: #fff;
+    font-weight: 800;
+    font-size: 18px;
+    color: #FD7809;
+    margin-left: 5px;
+}
+.ticket-footer .tic-close-btn {
+    color: #f8f9fa;
+    float: right;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 45px;
+}
+.ticket-footer .btn-back {
+    box-shadow: none;
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 0 !important;
+    padding: 3px 10px;
+    margin-top: 8px;
+    text-transform: capitalize;
+    font-size: 13px;
+}
+.participants-body {
+    background-color: #e0e0e0;
+    margin-left: -48px;
+    margin-right: -48px;
+    padding-left: 48px;
+    padding-right: 48px;
+    padding-top: 7px;
+    padding-bottom: 20px;
+    margin-top: 8px;
+}
+.participants-body .md-form {
+    background-color: #fff;
+    /* padding: 0 5px; */
+}
+.participants-body .md-form label {
+    padding-left: 10px;
+    margin-top: -3px;
+}
+.participants-body .md-form label.active {
+    padding-left: 0 !important;
+}
+.payments-body {
+    background-color: #e0e0e0;
+    margin-left: -48px;
+    margin-right: -48px;
+    padding-left: 15px;
+    padding-right: 30px;
+    padding-top: 14px;
+    padding-bottom: 15px;
+    margin-top: 8px;
+}
+.payments-body .payment-right {
+    background-color: #fff;
+    padding-top: 10px;
+}
+.payments-body .payment-left {
+
+}
+.payments-body .pay-title {
+    margin-bottom: 0 !important;
+    font-size: 18px;
+}
+.payments-body .title-info {
+    text-align: center;
+    color: #1b8fca;
+    font-size: 13px;
+    font-weight: 400;
+    width: 100%;
+    display: block;
+}
+.payments-body .payment-methods {
+    margin-top: 15px;
+    list-style: none;
+    padding-left: 0 !important;
+    width: 75%
+}
+.payments-body .payment-methods li {
+    padding: 0 10px;
+    font-weight: 400;
+    margin-bottom: 5px;
+    line-height: 40px;
+}
+.payments-body .payment-methods li.active {
+    background-color: #fff;
+}
+.payments-body .payment-methods li.selected {
+    background-color: #1b8fca;
+    color: #fff;
+}
+.payments-body .payment-methods li:hover {
+    background-color: #fff;
+    cursor: pointer;
+    color: #000;
+}
+.payments-body .order-number {
+    text-align: center;
+    color: #1b8fca;
+    font-size: 13px;
+    font-weight: 400;
+}
+.payments-body .os-title {
+    margin-bottom: 10px;
+}
+.payments-body .os-sub-title {
+    font-size: 13px;
+    font-weight: 400;
+    color: #abaaaa;
+    padding-bottom: 6px;
+}
+.payments-body .ticket-details-final .t-item {
+    font-size: 14px;
+    padding-bottom: 5px;
+    font-weight: 400;
+}
+.payments-body .coupon-box {
+    color: #1b8fca;
+    font-size: 13px;
+    font-weight: 400;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+.payments-body .total-final-box {
+    font-weight: 500;
+    padding-right: 20px;
+}
+.payments-body .final-amt-txt {
+    color: #FD7809;
+    font-weight: 400;
+    font-size: 18px;
+    padding-left: 15px;
+}
+.participants-body .md-form input {
+    padding-left: .5rem;
+    width: 98.5% !important;
+}
