--- a/webroot/newtheme/css/style.css
+++ b/webroot/newtheme/css/style.css
@@ -6,6 +6,11 @@
  body {
      font-family: 'Helvetica';
 }*/
+@media (min-width: 992px){
+.navbar-expand-lg .navbar-nav {
+    margin-left: 75px ;
+    }
+}
  .search-box {
 }
  .search-box button {
