--- a/webroot/newtheme/custom/css/event.details.css
+++ b/webroot/newtheme/custom/css/event.details.css
@@ -1,3 +1,17 @@
+.breadcrumb{
+    margin-top: -14px;
+    margin-bottom: -14px;
+}
+.org-padd{
+padding: 14px;
+}
+.org-img{
+    width: 160px;
+    height: 120px;
+}
+.mb-4, .my-4 {
+    margin-bottom: 20px !important;
+}
 .mb-5, .my-5 {
    /* margin-bottom: 2rem!important;*/
 margin-bottom: 20px !important;
@@ -6,13 +20,14 @@ margin-bottom: 20px !important;
     padding-top: 0.2rem !important;
 }
 .event-details{
-    font-size: 14px!important;
+    font-size: 12.5px!important;
+    letter-spacing: .5px;
 }
 .tag-border{
     border:1px solid #4e4548!important;;
 }
 .tagline{
-    margin-top: 20px;
+    margin-top: 9px;
 }
  .flex-cont{
     border-radius: 7px!important;
@@ -37,7 +52,7 @@ font-size: 18px;
 }
  .cs-tag-title{
      position: absolute;
-     bottom: 20px;
+     bottom: 9px;
 }
  .mob-container{
      display: none;
@@ -135,10 +150,13 @@ font-size: 18px;
   /*   border: 1px solid #d4d4d4;*/
 }
 .cs_details_rightblock{
+    margin-top: 39px;
+    height: 390px;
      /*width:300px;*/
    /*  border: 1px solid #d4d4d4;*/
 }
 .cs_details_mapblock{
+    padding: 5px;
    /*  width:300px;*/
 /*     height: 220px;*/
    /*  border: 1px solid #d4d4d4;*/
