--- a/webroot/newtheme/css/style.css
+++ b/webroot/newtheme/css/style.css
@@ -6,10 +6,12 @@
  body {
      font-family: 'Helvetica';
 }*/
-@media (min-width: 992px){
-.navbar-expand-lg .navbar-nav {
-    margin-left: 75px ;
-    }
+/*.w-100 {
+    height: 400px;
+}*/
+   .navbar.scrolling-navbar {
+    padding-top: 4px !important;
+    padding-bottom: 4px!important;
 }
  .search-box {
 }
@@ -18,7 +20,7 @@
      border-radius: 0;
      margin: 0;
      padding: .84rem 1.14rem;
-     background-color: #2bbbad !important;
+     background-color: #50bac4 !important;
 }
  .search-box button i.fa-bars {
      margin-top: 4px;
@@ -121,7 +123,7 @@
      padding: 8px 10px !important;
 }
 .navbar .cs-city-btn:hover{
-     background-color: #2bbbad !important;
+     background-color: #50bac4 !important;
      color: #fff !important;  
 }
  .navbar .nav-item .cs-city-btn:not([disabled]):not(.disabled):active{
@@ -231,7 +233,8 @@
      height:20px;
 }
  .btn.btn-primary.cat-not-selected, .btn.btn-primary.category-selected {
-     background-color: #2bbbad !important;
+     /*background-color: #2bbbad !important;*/
+     background-color: #50bac4 !important;
 }
  .bootstrap-tagsinput .tag [data-role="remove"]::after {
      content: "x";
@@ -303,7 +306,8 @@
      box-shadow: 0 -5px 5px -5px #333;
      color: white;
      z-index: 100;
-     background-color: #59698d;
+    /* background-color: #59698d;*/
+      background-color: #424242;
      display: none;
 }
  .mobile-footer .container div {
@@ -572,13 +576,16 @@
          min-height: 115px;
     }
      .main-carousel .carousel-item img {
+     /* max-width: 767px; */
          max-width: 141%;
         /*max-width: 767px;
         */
+         margin-left: 90px!important;
          -webkit-transform: translateY(0%) translateX(-29%);
          transform: translateY(0%) translateX(-29%);
          position: absolute;
-         width: auto !important;
+        /* width: auto !important;*/
+         width: 125% !important;
     }
 }
  .navbar .cs_create_btn{
@@ -607,7 +614,7 @@
 }
  @media (min-width: 1900px){
      .search-box{
-         margin-left: 266px;
+         margin-left: 330px;
     }
 }
  .dropdown-item.cs_filter_dropdown:focus, .dropdown-item.cs_filter_dropdown:hover{
@@ -745,4 +752,11 @@ div#noEventsMsg {
 /*roslin edit*/
 .icon-align{
     display: contents !important;
+}
+.btn-mdb-color {
+    background-color: #1b8fca!important;
+}
+.foot-align {
+    margin-left: -20px;
+    font-size: large !important;
 }
