--- a/webroot/newtheme/custom/css/event.details.css
+++ b/webroot/newtheme/custom/css/event.details.css
@@ -6,8 +6,8 @@
 padding: 14px;
 }
 .org-img{
-    width: 160px;
-    height: 120px;
+   /* width: 160px;*/
+    height: 130px !important;
 }
 .mb-4, .my-4 {
     margin-bottom: 20px !important;
