--- a/webroot/newtheme/custom/css/event.add.css
+++ b/webroot/newtheme/custom/css/event.add.css
@@ -155,3 +155,11 @@ width: 300px;
      /*height: 200px;*/
    /*  border: 1px solid #d4d4d4;*/
 }
+.date-input-class {
+    width: 100% !important;
+}
+.area-name-class {
+}
+.ui-timepicker-standard .ui-widget.ui-widget-content {
+    border: 0px solid #c5c5c5;
+}
