--- a/webroot/newtheme/css/style.css
+++ b/webroot/newtheme/css/style.css
@@ -1,11 +1,12 @@
 /* Your custom styles */
-/* @font-face {
+ @font-face {
      font-family: Helvetica;
      src: url("../font/Helvetica/HELR45W.ttf");
 }
  body {
-     font-family: 'Helvetica';
-}*/
+font-family: 'PT Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+}
 /*.w-100 {
     height: 400px;
 }*/
@@ -216,6 +217,8 @@
 }
  .search-text-box .bootstrap-tagsinput {
      padding-left: 10px;
+     border-left: 0;
+     border-right: 0;
 }
  .subcategory-dd .sub-category {
      padding: 7px;
