--- a/webroot/newtheme/custom/css/event.add.css
+++ b/webroot/newtheme/custom/css/event.add.css
@@ -35,20 +35,23 @@
 .imgeff{
     width: 100%;
     height: 300px;
-    opacity: 1;
+    opacity: 0.8;
   display: block;
-  transition: .5s ease;
+ /* transition: .5s ease;
   backface-visibility: hidden;
+  background-color: rgba(0,0,0,0.5) !important;*/
+   background-color: black !important;
 }
 .title-form{
     margin-bottom: 40px!important;
-    width: 1000px;
+    width: 500px;
     border-bottom: 1px solid #ffffff !important;
    /* color: #ffffff !important;*/
 }
-.title-formmob{
+/*.title-mob{
 width: 300px;
-}
+ margin-bottom: 40px!important;
+}*/
 .middle {
     font-weight: bold;
     color: white;
@@ -162,4 +165,47 @@ width: 300px;
 }
 .ui-timepicker-standard .ui-widget.ui-widget-content {
     border: 0px solid #c5c5c5;
+}
+
+
+#snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #1b8fca;
+    color: #fff;
+    text-align: center;
+    border-radius: 4px;
+    padding: 16px;
+    position: fixed;
+    z-index: 2;
+    left: 50%;
+    bottom: 50px;
+    font-size: 17px;
+}
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
 }
