Design changes in JS and CSS

--- a/webroot/newtheme/css/style.css
+++ b/webroot/newtheme/css/style.css
@@ -763,3 +763,7 @@ div#noEventsMsg {
     margin-left: -20px;
     font-size: large !important;
 }
+.error-txt {
+    color: #FF0000; 
+    font-size: 11px;
+}
