--- a/webroot/newtheme/custom/css/event.add.css
+++ b/webroot/newtheme/custom/css/event.add.css
@@ -42,6 +42,7 @@
   background-color: rgba(0,0,0,0.5) !important;*/
    background-color: black !important;
 }
+
 .title-form{
     margin-bottom: 15px!important;
     width: 450px;
@@ -159,14 +160,16 @@ width: 300px;
    /*  border: 1px solid #d4d4d4;*/
 }
 .date-input-class {
-    width: 100% !important;
+    /*width: 100% !important;*/
 }
 .area-name-class {
 }
 .ui-timepicker-standard .ui-widget.ui-widget-content {
     border: 0px solid #c5c5c5;
 }
-
+#ui-id-1.ui-widget-content {
+    font-size: 12px;
+}
 
 #snackbar {
     visibility: hidden;
@@ -190,6 +193,169 @@ width: 300px;
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
+.top-contain-add {
+    width: 100%;
+    height: 300px;
+    opacity: 0.8;
+    display: block;
+    background-color: #009688 !important;
+}
+.top-contain-add .middle-image {
+    width: 300px;
+    margin: 0 auto;
+    padding-top: 65px;
+}
+.top-contain-add .middle-image .head {
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 0px;
+}
+.top-contain-add .btn-outline-info-2 {
+    border: 2px solid #b2ceb3 !important;
+}
+
+.top-contain-add .event-add-title {
+    margin-top: 65px;
+    width: 50%;
+}
+.top-contain-add .event-add-title label {
+    color: #fff0f0 !important;
+}
+.top-contain-add .event-add-title label.active {
+
+}
+.top-contain-add .md-form.event-add-title input[type=text]:focus:not([readonly]) {
+    box-shadow:0 1px 0 0 #ffc107 !important;
+    border-bottom: 1px solid #fff0f0 !important;
+}
+.top-contain-add .md-form.event-add-title input.form-control:focus {
+    color: #fff0f0;
+}
+.add-event-container .rs-details-bold {
+    margin-left: 0 !important;
+    font-weight: normal !important;
+}
+.ui-timepicker-standard {
+    font-size: 11px !important;
+}
+.add-event-container .cs_banner_bg {
+    opacity: 0.5 !important;
+}
+.add-event-container .dispmiddle {
+    background-color: #ffffff;
+    color: #000;
+    padding: 25px;
+    top: 125px;
+    left: 30%;
+}
+.add-event-container #categories-id {
+    padding: 0 5px 0;
+}
+.add-event-container #eventsubcategories-sub-categories {
+    padding: 5px 10px;
+    width: 100%;
+}
+.add-event-container .add-category {
+    width: 100% !important;
+}
+.add-event-container .subcategory-id {
+    width: 100% !important;
+}
+
+.add-event-container div#subdiv {
+    width: 100%;
+}
+.add-event-container .select2-container--default .select2-selection--single {
+    border-radius: 0 !important;
+    padding: 5px 5px !important;
+    height: 41px !important;
+}
+.add-event-container .select2-container--default .select2-selection--multiple {
+    border-radius: 0 !important;
+    padding: 0px 5px !important;
+    height: 41px !important;
+}
+.add-event-container .select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 38px !important;
+}
+.add-event-container .select2-container--default.select2-container--focus .select2-selection--multiple {
+    border: 1px solid #aaa;
+    outline: 0;
+}
+.add-event-container .no-radius {
+    border-radius: 0 !important;
+}
+.add-event-container .widget-header {
+    text-align: center;
+    font-size: 18px;
+}
+.add-event-container .cs_details_advertblock {
+    min-height: 330px;
+    width: 100%;
+    
+}
+.add-event-container .category-form {
+    margin-top: 0 !important;
+}
+.add-event-container .btn-outline-info-3 {
+    border: 2px solid #b2ceb3 !important;
+    color: #388e3c !important;
+}
+.add-event-container .btn-outline-info-3:active {
+    border: 2px solid #33b5e5 !important;
+    color: #33b5e5 !important;
+}
+.add-event-container .logo-upload-div {
+    text-align: center;
+}
+.add-event-container .launch-map {
+    margin-left: 0;
+}
+.add-event-container .md-form label {
+    top: 5px !important;
+}
+@media (max-width: 1200px){
+  .add-event-container .right-side i.fa {
+      font-size: 20px !important;
+  }
+  .add-event-container .right-side .md-form .prefix~input,
+  .add-event-container .right-side .md-form .prefix~textarea {
+      margin-left: 1.5rem !important;
+  }
+  .add-event-container .right-side .md-form .prefix~label {
+      margin-left: 1.5rem !important;
+  }
+}
+@media (max-width: 800px){
+  .add-event-container .right-side i.fa {
+      display: none;
+  }
+  .add-event-container .right-side .md-form .prefix~input,
+  .add-event-container .right-side .md-form .prefix~textarea {
+      margin-left: 0 !important;
+      width: 100%;
+  }
+  .add-event-container .right-side .md-form .prefix~label {
+      margin-left: 0 !important;
+  }
+  .add-event-container .cs_banner_bg {
+      height: 280px !important;
+  }
+  .add-event-container .dispmiddle { 
+      top: 70px !important;
+      left: 75px !important;
+  }
+}
+@media (max-width: 400px){
+  .add-event-container .dispmiddle { 
+      top: 70px !important;
+      left: 15px !important;
+  }
+  .top-contain-add .event-add-title {
+      width: 100% !important;
+  }
+}
 @-webkit-keyframes fadein {
     from {bottom: 0; opacity: 0;} 
     to {bottom: 30px; opacity: 1;}
@@ -209,3 +375,4 @@ width: 300px;
     from {bottom: 30px; opacity: 1;}
     to {bottom: 0; opacity: 0;}
 }
+
